# HSE-FCS-2nd-year

./: CMakeLists.txt  README.md
10/: CMakeLists.txt
10/include/ten/: config_10.h
10/src/: main_10_observer.c  main_10_programmer.c  observer_10.c  programmer_proc_10.c
4-6/: CMakeLists.txt
4-6/include/four_six/: config_4_6.h
4-6/src/: main_4_6.c  programmer_logic_4_6.c
7-8/: CMakeLists.txt
7-8/include/seven_eight/: config_7_8.h  ipc_7_8.h
7-8/src/: ipc_7_8.c  main_7_8_init.c  main_7_8_programmer.c  programmer_proc_7_8.c
9/: CMakeLists.txt
9/include/nine/: config_9.h
9/src/: main_9_observer.c  main_9_programmer.c  observer_9.c  programmer_proc_9.c
common/: CMakeLists.txt
common/include/common/: config.h  log_utils.h  model.h  random_utils.h  shared_state.h
common/src/: log_utils.c  model.c  random_utils.c  shared_state.c
АКОС/HW-7/: file_copy_syscalls.c
АКОС/HW-8/: CMakeLists.txt  README.md  client.c  report.md  server.c  shared.h  shared_memory.h
АКОС/IHW-1/: README.md  alg.asm  io.asm  macros.asm  main_app.asm  main_tests.asm
АКОС/IHW-2/: sinhCheck.py
АКОС/IHW-2/solution/: macros.asm  main.asm  main_autotests.asm  sinh_series.asm
Алгоритмы/SET-3/: A1.cpp  graphics.py
Алгоритмы/SET-3/A1/: data.csv
Алгоритмы/SET-3/A2/: data_A2.csv  graphics_A2.py
Алгоритмы/SET-3/A2/solution/: array_generator.cpp  array_generator.h  main.cpp  sort_algorithms.cpp  sort_algorithms.h
Алгоритмы/SET-3/A3/: data_A3.csv  graphics_A3.py
Алгоритмы/SET-3/A3/solution/: main.cpp  quick_algorithms.cpp  quick_algorithms.h  sort_tester.h
Отчет/: Отчет АКОС ИДЗ-3.md
